@@ -1,7 +1,33 @@
 # -*- coding: utf-8 -*-
+import numpy as np
 
 from . import latex
 from . import cache
 from . import metaclass
 
-__all__ = ["latex", "cache", "metaclass"]
+__all__ = ["latex",
+           "cache",
+           "metaclass",
+           "extract_block_diag",
+           ]
+
+
+def extract_block_diag(M, n):
+    """Extract diagonal blocks from square Matrix.
+
+    Args:
+        M (np.array): Square matrix.
+        n (int): Number of blocks to extract.
+
+    Example:
+        >>> foo = np.array([[ 1.,  1.,  0.,  0.],
+        ... [ 1.,  1.,  0.,  0.],
+        ... [ 0.,  0.,  2.,  2.],
+        ... [ 0.,  0.,  2.,  2.]])
+        >>> extract_block_diag(foo, 2)
+        [array([[ 1.,  1.],
+                [ 1.,  1.]]), array([[ 2.,  2.],
+                [ 2.,  2.]])]
+
+    """
+    return [np.split(m, n, axis=1)[i] for i, m in enumerate(np.split(M, n))]
